--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -7,14 +7,61 @@
 body{
   background-color: black;
   color: white;
+  width: 100%;
+  height: auto;
+}
+
+body.form-1.form-2{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.form-1 .form-2{
+  color: white;
+  justify-content: space-between;
+  height: 100vh;
   display : flex;
   justify-content:center;
   align-items: center;
-  height: 100vh;
- 
+  background-color: black;
 }
 
-.form{
+.navbar{
   color: white;
-  justify-content: space-between;
+  background-color: rgb(42, 30, 30);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
+  
+}
+
+.links{
+  display: flex;
+  justify-content:space-evenly ;
+  width: 60vw;
+}
+
+.function{
+  height:100vh;
+  width:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  
+}
+
+.function-1{
+  height:auto;
+  width:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
 }
